--- a/crates/daemon-slayer-tray/Cargo.toml
+++ b/crates/daemon-slayer-tray/Cargo.toml
@@ -4,8 +4,8 @@ name = "daemon-slayer-tray"
 version = "0.1.0"
 
 [dependencies]
-daemon-slayer-client = { path = "../daemon-slayer-client" }
-image = "0.25"
-tao = "0.33"
-tokio = { version = "1", features = ["sync", "macros", "time"] }
-tray-icon = "0.20.1"
+daemon-slayer-client = { workspace = true }
+image = { workspace = true }
+tao = { workspace = true }
+tokio = { workspace = true, features = ["sync", "macros", "time"] }
+tray-icon = { workspace = true }
