--- a/crates/daemon-slayer-error-handler/Cargo.toml
+++ b/crates/daemon-slayer-error-handler/Cargo.toml
@@ -8,10 +8,10 @@ cli = ["daemon-slayer-core/cli", "async-trait"]
 notify = ["daemon-slayer-core/notify"]
 
 [dependencies]
-color-eyre = "0.6"
-daemon-slayer-core = { path = "../daemon-slayer-core" }
-tap = "1"
-thiserror = "2"
-tracing = "0.1"
-tokio = "1"
-async-trait = { version = "0.1", optional = true }
+color-eyre = { workspace = true }
+daemon-slayer-core = { workspace = true }
+tap = { workspace = true }
+thiserror = { workspace = true }
+tracing = { workspace = true }
+tokio = { workspace = true }
+async-trait = { workspace = true, optional = true }
