--- a/crates/daemon-slayer-process/Cargo.toml
+++ b/crates/daemon-slayer-process/Cargo.toml
@@ -4,15 +4,15 @@ name = "daemon-slayer-process"
 version = "0.1.0"
 
 [dependencies]
-bytesize = { version = "2", features = ["serde"] }
-chrono = { version = "0.4", features = ["serde"] }
-daemon-slayer-core = { path = "../daemon-slayer-core" }
-num_cpus = "1"
-readonly = "0.2"
-serde = "1"
-strum = { version = "0.27", features = ["derive"] }
-sysinfo = "0.35"
-async-trait = { version = "0.1", optional = true }
+bytesize = { workspace = true, features = ["serde"] }
+chrono = { workspace = true, features = ["serde"] }
+daemon-slayer-core = { workspace = true }
+num_cpus = { workspace = true }
+readonly = { workspace = true }
+serde = { workspace = true }
+strum = { workspace = true, features = ["derive"] }
+sysinfo = { workspace = true }
+async-trait = { workspace = true, optional = true }
 
 [features]
 cli = ["daemon-slayer-core/cli", "async-trait"]
