--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -3,3 +3,20 @@
 exclude = ["old", "target", "assets"]
 members = ["*"]
 resolver = "3"
+
+[workspace.dependencies]
+confique = "0.3.1"
+daemon-slayer = { path = "../crates/daemon-slayer" }
+derive_more = { version = "2.0.1", default-features = false }
+serde = "1.0.219"
+tar = "0.4.44"
+tokio = { version = "1.45.0" }
+tracing = "0.1.41"
+bollard = { version = "0.19.2" }
+flate2 = "1.1.2"
+ignore = "0.4.23"
+clap = { version = "4.5.42" }
+http-body-util = "0.1.3"
+tower-http = "0.6.6"
+vergen-gix = "1.0.9"
+axum = "0.8.4"
