--- a/examples/custom-command/Cargo.toml
+++ b/examples/custom-command/Cargo.toml
@@ -6,14 +6,14 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.5.38", features = ["derive"] }
-daemon-slayer = { path = "../../crates/daemon-slayer", features = [
-    "client-standard",
-    "server-standard",
+clap = { workspace = true, features = ["derive"] }
+daemon-slayer = { workspace = true, features = [
+  "client-standard",
+  "server-standard",
 ] }
-derive_more = { version = "2.0.1", default-features = false, features = [
-    "as_ref",
+derive_more = { workspace = true, default-features = false, features = [
+  "as_ref",
 ] }
-serde = "1.0.219"
-tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
-tracing = "0.1.41"
+serde = { workspace = true }
+tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
+tracing = { workspace = true }
