--- a/examples/notifications/Cargo.toml
+++ b/examples/notifications/Cargo.toml
@@ -4,24 +4,22 @@ name = "notifications"
 version = "0.1.0"
 
 [dependencies]
-confique = "0.3.0"
-daemon-slayer = { path = "../../crates/daemon-slayer", features = [
+confique = { workspace = true }
+daemon-slayer = { workspace = true, features = [
   "client-standard",
   "server-standard",
   "native-notification",
   "dialog",
-] }
-daemon-slayer-logging = { path = "../../crates/daemon-slayer-logging", features = [
-  "system",
-  "ipc",
+  "logging-system",
+  "logging-ipc",
 ] }
 
-derive_more = { version = "2.0.1", default-features = false, features = [
+derive_more = { workspace = true, default-features = false, features = [
   "as_ref",
 ] }
-serde = "1.0.219"
-tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
-tracing = "0.1.41"
+serde = { workspace = true }
+tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
+tracing = { workspace = true }
 
 [[bin]]
 name = "notification-client"
