--- a/examples/socket-activated/Cargo.toml
+++ b/examples/socket-activated/Cargo.toml
@@ -4,26 +4,24 @@ name = "socket-activated"
 version = "0.1.0"
 
 [dependencies]
-axum = "0.8.4"
-confique = "0.3.0"
+axum = { workspace = true }
+confique = { workspace = true }
 daemon-slayer = { path = "../../crates/daemon-slayer", features = [
   "client-standard",
   "server-standard",
   "tray",
   "build-info",
   "socket-activation",
+  "logging-system",
+  "logging-ipc",
 ] }
-daemon-slayer-logging = { path = "../../crates/daemon-slayer-logging", features = [
-  "system",
-  "ipc",
-] }
-derive_more = { version = "2.0.1", default-features = false, features = [
+derive_more = { workspace = true, default-features = false, features = [
   "as_ref",
 ] }
-serde = "1.0.219"
-tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
-tower-http = { version = "0.6.4", features = ["trace"] }
-tracing = "0.1.41"
+serde = { workspace = true }
+tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
+tower-http = { workspace = true, features = ["trace"] }
+tracing = { workspace = true }
 
 [[bin]]
 name = "socket-activated-client"
@@ -34,7 +32,5 @@ name = "socket-activated-server"
 path = "src/bin/server.rs"
 
 [build-dependencies]
-vergen-gix = { version = "1.0", features = ["build", "cargo", "rustc", "si"] }
-daemon-slayer = { path = "../../crates/daemon-slayer", features = [
-  "build-info",
-] }
+vergen-gix = { workspace = true, features = ["build", "cargo", "rustc", "si"] }
+daemon-slayer = { workspace = true, features = ["build-info"] }
