--- a/examples/standard/Cargo.toml
+++ b/examples/standard/Cargo.toml
@@ -4,23 +4,21 @@ name = "standard"
 version = "0.1.0"
 
 [dependencies]
-confique = "0.3.0"
-daemon-slayer = { path = "../../crates/daemon-slayer", features = [
+confique = { workspace = true }
+daemon-slayer = { workspace = true, features = [
   "client-standard",
   "server-standard",
   "tray",
   "build-info",
+  "logging-system",
+  "logging-ipc",
 ] }
-daemon-slayer-logging = { path = "../../crates/daemon-slayer-logging", features = [
-  "system",
-  "ipc",
-] }
-derive_more = { version = "2.0.1", default-features = false, features = [
+derive_more = { workspace = true, default-features = false, features = [
   "as_ref",
 ] }
-serde = "1.0.219"
-tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
-tracing = "0.1.41"
+serde = { workspace = true }
+tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
+tracing = { workspace = true }
 
 [[bin]]
 name = "standard-client"
@@ -31,4 +29,4 @@ name = "standard-server"
 path = "src/bin/server.rs"
 
 [build-dependencies]
-vergen-gix = { version = "1.0", features = ["build", "cargo", "rustc", "si"] }
+vergen-gix = { workspace = true, features = ["build", "cargo", "rustc", "si"] }
