remove futures-cancel

--- a/crates/daemon-slayer-config/Cargo.toml
+++ b/crates/daemon-slayer-config/Cargo.toml
@@ -19,6 +19,7 @@ futures = { workspace = true }
 tap = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
+tokio-util = { workspace = true }
 tracing = { workspace = true }
 async-trait = { workspace = true, optional = true }
 
