--- a/crates/daemon-slayer-file-watcher/Cargo.toml
+++ b/crates/daemon-slayer-file-watcher/Cargo.toml
@@ -19,4 +19,5 @@ tokio = { workspace = true, features = [
   "sync",
   "macros",
 ] }
+tokio-util = { workspace = true }
 tracing = { workspace = true }
