--- a/crates/daemon-slayer-notify/Cargo.toml
+++ b/crates/daemon-slayer-notify/Cargo.toml
@@ -17,6 +17,7 @@ native-dialog = { workspace = true, features = [
   "windows_visual_styles",
 ], optional = true }
 tap = { workspace = true }
+tokio-util = { workspace = true }
 async-trait = { workspace = true }
 
 [features]
