--- a/examples/notifications/Cargo.toml
+++ b/examples/notifications/Cargo.toml
@@ -19,6 +19,7 @@ derive_more = { workspace = true, default-features = false, features = [
 ] }
 serde = { workspace = true }
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
+tokio-util = { workspace = true }
 tracing = { workspace = true }
 
 [[bin]]
