--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -11,6 +11,7 @@ derive_more = { version = "2.0.1", default-features = false }
 serde = "1.0.219"
 tar = "0.4.44"
 tokio = { version = "1.45.0" }
+tokio-util = { version = "0.7.16" }
 tracing = "0.1.41"
 bollard = { version = "0.19.2" }
 flate2 = "1.1.2"
