--- a/crates/daemon-slayer-server/Cargo.toml
+++ b/crates/daemon-slayer-server/Cargo.toml
@@ -23,7 +23,7 @@ tokio = { workspace = true, features = [
   "macros",
   "sync",
 ] }
-windows-service = { git = "https://github.com/aschey/windows-service-rs", rev = "32919aebe4c59f7855a8ebd72fe7d716db6a8f28" }
+windows-service = { workspace = true }
 
 
 [target.'cfg(unix)'.dependencies]
